# rag_chatbot

./: .gitignore  README.md  config.py  database.py  ingest.py  models.py  pyproject.toml  retriever.py  steps
alembic/: env.py
alembic/versions/: 2a47da42017a_create_initial_tables.py  e7719ec61071_create_initial_tables.py
