[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
]
